[package]
name = "zombie_alacod"
description = "An ECS-friendly ldtk plugin for bevy."
version = "0.0.1"
edition = "2021"
exclude = ["assets/*", "repo/*", "scripts/*"]



[workspace]
members = [ "crates/*" ]

[dependencies]
bevy_ecs_tilemap = { version = "0.14", default-features = false }
bevy_ecs_ldtk = { version = "0.10", default-features = true }
bevy = { version = "0.14", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_core_pipeline",] }
derive-getters = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
rand = "0.8.5"

pathfinding = "4.9.1"

utils = { path = "./crates/utils" }
map = { path = "./crates/map" }
game = { path = "./crates/game" }

[dev-dependencies]
bevy = "0.14"
bevy-inspector-egui = "0.25.0"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "map_preview"
path = "examples/map_preview.rs"

[[example]]
name = "map_generation"
path = "examples/map_generation.rs"

[[example]]
name = "map_explorer"
path = "examples/map_explorer.rs"

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main" }
#bevy_ecs_ldtk = { git = "https://github.com/berlingoqc/bevy_ecs_ldtk", branch = "transform_ldtk_project" }
bevy_ecs_ldtk = { path = "../bevy_ecs_ldtk" }


