
[package]
name = "map"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = "*"
#bevy_ecs_ldtk = { git = "https://github.com/berlingoqc/bevy_ecs_ldtk", branch = "transform_ldtk_project", default-features = true }
bevy_ecs_ldtk = { path = "../../../bevy_ecs_ldtk", default-features = true }


rand = "0.8.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
pathfinding = "4.9.1"
