
[package]
name = "map"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = "*"
bevy_ecs_ldtk = { version = "*", default-features = true }

utils = { path = "../utils"}


rand = "0.8.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
pathfinding = "4.9.1"
